# CF-DQN

./: analyze_sweep_top10.py  analyze_sym_fd_sweep.py  breakout_minatar_3algo_seeds.sh  cmds.txt  craftax_3algo_seeds.sh  craftax_4algo_seeds.sh  craftax_6algo_seeds.sh  cvi_vs_c51_atari.sh  install_jax_cuda.sh  minatar_10m_5env_3algo_seeds.sh  minatar_10m_5env_6algo_seeds.sh  plot_wandb_craftax.py  plot_wandb_episodic_return.py  plot_wandb_minatar.py  pyproject.toml  sweep_cf_dqn.yaml  sweep_cf_dqn_cartpolev1.sh  sweep_deep_cvi_new_cartpolev1.sh  sweep_deep_cvi_new_cartpolev1.yaml  sweep_sym_fd_cartpolev1.sh  sweep_sym_fd_cartpolev1.yaml
cleanrl/: c51.py  c51_atari.py  c51_craftax_jax.py  cf_dqn.py  craftax_env.py  cvi_dqn.py  cvi_dqn_atari.py  cvi_dqn_jax.py  cvi_dqn_nocollapse_jax.py  cvi_utils.py  cvi_utils_nocollapse_jax.py  dqn_gymnax_jax.py  fqf_gymnax_jax.py  iqn_gymnax_jax.py  ppo.py  qrdqn_gymnax_jax.py
cleanrl_utils/: cf.py
docs/: CVI_DQN_vs_CF_DQN.md  PHASE_WRAPPING_LIMITATION.md
docs/mental-notes/: CF_DQN.md  CF_DQN_ALGORITHM.md  CF_DQN_IMPLEMENTATION.md  CVI_DQN_vs_CF_DQN.md  EXPERIMENTS.md
tests/: test_cvi_nocollapse_jax.py
